# mux

./: CMakeLists.txt  PlatConfig.mk  audio.g711  build.sh  video.h264
demo/: CMakeLists.txt
demo/dec_g711/: CMakeLists.txt  G711AToPcm.cpp  G711AToPcm.h  IDecodeToPcm.cpp  IDecodeToPcm.h  MtAACEncoder.cpp  MtAACEncoder.h  MtAACEncoderAPI.cpp  MtAACEncoderAPI.h  MtDSSBuffers.cpp  MtDSSBuffers.h  PcmToAac.cpp  PcmToAac.h  audio_buffer.cpp  outDebug.h
demo/src/: CMakeLists.txt  audio_codec.c  audio_codec.h  common.h  mRing.c  mRing.h  main.cpp  muxer.cpp  muxer.h  video_codec.c  video_codec.h
libs/fdk-aac/lib/cmake/fdk-aac/: fdk-aac-config-version.cmake  fdk-aac-config.cmake  fdk-aac-targets-release.cmake  fdk-aac-targets.cmake
libs/fdk-aac/lib/pkgconfig/: fdk-aac.pc
